opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/bonsai_bench"
bug-reports: "https://github.com/janestreet/bonsai_bench/issues"
dev-repo: "git+https://github.com/janestreet/bonsai_bench.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/bonsai_bench/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "bonsai"
  "core"
  "core_bench"
  "expectable"
  "incr_dom"
  "ppx_jane"
  "ppx_pattern_bind"
  "textutils"
  "dune"             {>= "3.11.0"}
  "js_of_ocaml"      {>= "5.1.1" & < "5.7.0"}
  "js_of_ocaml-ppx"  {>= "5.1.1" & < "5.7.0"}
  "ocaml-embed-file"
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A library for benchmarking bonsai web applications"
description: "
Bonsai is a library for building reusable UI components inside an
     Incremental-style UI framework such as Incr_dom or React. This repository
     provides benchmarking capabilities.
"
